crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_extract_kv_with_sep.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | extract kv sep=\":\"\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
---
rust_stages: 1
  Extract(ExtractStage { mode: KeyValue { separator: ':' }, source_field: None })
