crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_extract_named_group.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | extract \"(?P<ip>[0-9]+\\.[0-9]+\\.[0-9]+\\.[0-9]+)\" from message\"#)"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT COLUMNS(c -> translate(c, 'ABCDEFGHIJKLMNOPQRSTUVWXYZ', 'abcdefghijklmnopqrstuvwxyz') NOT IN ('ip')), nullif(regexp_extract("message", ?, 1), '') AS "ip"
FROM "_s0"
---
params:
  0: '(?P<ip>[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+)'
