crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_let_arithmetic.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | let duration_ms = duration * 1000\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT COLUMNS(c -> translate(c, 'ABCDEFGHIJKLMNOPQRSTUVWXYZ', 'abcdefghijklmnopqrstuvwxyz') NOT IN ('duration_ms')), (("duration" * ?)) AS "duration_ms"
FROM "_s0"
---
params:
  0: 1000
