crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_let_function_call.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | let host_lower = lower(host)\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT COLUMNS(c -> c NOT IN ('host_lower')), (LOWER("host")) AS "host_lower"
FROM "_s0"
