crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_limit.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | limit 20\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
LIMIT 20
