crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pipe_pivot_no_by.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | pivot count() on service\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
), _s1 AS (
  SELECT "service"
  FROM "_s0"
)
PIVOT "_s1"
ON "service"
USING COUNT(*)
